# Voice_bot_Example

thesis/livekit-worker/: .gitignore  __init__.py  agent.py  agent_local.py  custom_openai.py  docker-compose.gpu.yaml  docker-compose.yaml  main.py  main_local.py  pyproject.toml  requirements.txt  run_tests.sh
thesis/livekit-worker/.github/workflows/: tests.yaml
thesis/livekit-worker/backend/main_api_service/: Dockerfile  fasterwhisperclient.py  main_api.py  main_api_benchmark.py  piperttsclient.py  requirements.txt
thesis/livekit-worker/backend/stt_service/: Dockerfile  fasterwhisperapi.py  hfwhisperapi.py  requirements.txt  whisperapi.py
thesis/livekit-worker/backend/stt_service/custom_denoiser/: __init__.py
thesis/livekit-worker/backend/tts_service/: Dockerfile  piperttsapi.py  requirements.txt
thesis/livekit-worker/custom_denoiser/: __init__.py
thesis/livekit-worker/custom_gemini/: geministt.py  realtime.py
thesis/livekit-worker/custom_local/: __init__.py  diarization_stt.py  fasterwhisper_stt.py  hf_stt.py  pipertts.py
thesis/livekit-worker/custom_local/f5tts/: __init__.py  base.py  wrapper.py
thesis/livekit-worker/custom_local/f5tts/f5_tts/: api.py  socket_client.py  socket_server.py
thesis/livekit-worker/custom_local/f5tts/f5_tts/configs/: F5TTS_v1_Pruned_12.yaml  F5TTS_v1_Pruned_14.yaml
thesis/livekit-worker/custom_vad/: run_sds.py  vap_fasterwhisper_stt.py  vap_vad.py
thesis/livekit-worker/custom_vad/vap/: audio.py  objective.py  plot_utils.py  torchmodel.py
thesis/livekit-worker/tests/: test_fasterwhisperapi.py  test_piperttsapi.py
(+444 files in other folders)
